attempt to get static files to work

--- a/front/src/Style/AdjustableDigitalReadout.css
+++ b/front/src/Style/AdjustableDigitalReadout.css
@@ -9,7 +9,7 @@
 }
 @font-face{
     font-family: "digital";
-    src:url('/virtual-hendi/fonts/digital-7 (mono).ttf');
+    src:url('/fonts/digital-7 (mono).ttf');
 }
 .button-container>button{
     flex-grow: 1;
