--- a/front/src/Style/VirtualHendiInterface.css
+++ b/front/src/Style/VirtualHendiInterface.css
@@ -1,6 +1,7 @@
 #main-virtual-hendi-interface-container{
     display: flex;
     flex-direction: row;
+    height: 100%;
 }
 #hendi-instrument{
     position: relative;
@@ -28,3 +29,38 @@
     font-size: 2em;
     font-style: italic;
 }
+.spinner {
+    width: 100px;
+    height: 100px;
+    -webkit-animation:spin 3s linear infinite;
+    -moz-animation:spin 3s linear infinite;
+    animation:spin 3s linear infinite;
+}
+.spinner-container {
+    position: relative;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+}
+.dygraph-label.dygraph-xlabel {
+    text-align: center;
+}
+.dygraph-label.dygraph-ylabel {
+    text-align: center;
+    display: block;
+    transform: rotate(-90deg);
+}
+.a-button{
+    background-color: lightgray;
+    border: 1px solid black;
+    border-radius: 2px;
+}
+.a-button:hover{
+    background-color: gray;
+}
+
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
