--- a/front/src/Style/Instructions.css
+++ b/front/src/Style/Instructions.css
@@ -1,31 +1,31 @@
-/**, *::before, *::after {
-    box-sizing: border-box; 
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: normal;
-} ^ This is how I did it in my practice projects while learning css.
-*/
 .box {
     box-sizing: border-box;
-    position: relative;
     border: solid black 1px;
+    position: absolute;
     left: 30px;
-    bottom: 85vh;
+    top: 85vh;
     background-color: white;
     z-index: 10;
     max-width: 40vw;
     border-radius: 1em;
-    padding: 0.5em;
+    padding: 0.2em;
     margin:1em;
-}
-
-.instructions {
+  }
+  
+  .header {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: normal;
+    font-size: medium;
+  }
+  
+  .instructions {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: normal;
     font-size: small;
     display: flex;
     align-items: flex-start;
-    justify-content: space-around;
     flex-direction: column;
     padding: 10px;
     word-wrap: normal;
-}
+  }
+  
